# pred_age

./: .gitignore  LICENSE  MLDL.py  README.md  data_make.py  example.py  model.py  pyproject.toml  setup.py  todo.md  todo_fix.md
.cursor/rules/: fix_error.mdc  refactor.mdc  test.mdc
pred_age/: __init__.py  data_make.py  evaluate.py  label_tr.py  make_dataset.py  model.py
pred_age.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pred_age/data/: __init__.py  dataset.py  preprocessing.py
pred_age/metrics/: __init__.py  evaluation.py
pred_age/models/: __init__.py  bert_model.py  training.py
pred_age/utils/: __init__.py  label_transforms.py
tests/: test_train.py
w2vmodel/: word2vec.model
