[project]
name = "pred-age"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "torch>=2.8.0",
    "transformers>=4.55.2",
    "fugashi>=1.3.0",
    "unidic-lite>=1.0.8",
    "protobuf>=3.20.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pred_age*"]
exclude = ["tests*", "test_data*", "result*"]
